update javadocs, minor fix